# cpp-private-exposer

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example.cpp
src/: exposer.hpp
tests/: CMakeLists.txt  ut_exposer.cpp
